# web-app-ci-cd

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: project-automation.yml  python-app.yml
